# ISLES2024-MIPLAB-CTA

./: Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt  run_job.sh
ISLES2024_CTA/: data_generator.py  data_stats.py  loss.py  main.py  metrics.py  model.py  read_for_test.py  test_model.py
src/: data_loader.py  helpers.py  image_processing.py  model.py  prediction.py
test/input/: acute-stroke-clinical-information.json
test/input/__MACOSX/: ._acute-stroke-clinical-information.json
test/input/__MACOSX/images/cbv-parameter-map/: ._e53e8b66-4fb5-4350-b514-aba34376965d.mha
test/input/__MACOSX/images/preprocessed-tmax-map/: ._02818af5-8659-4377-9f7a-b93706d99eb3.mha
