[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ISLES2024-CTA"
description = "A python package for the ISLES2024 challenge."
readme = "README.md"
authors = [{ name = "A Very Smart Researcher" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "panoptica",
    "torch",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ucalgary-miplab/ISLES2024-CTA"
Documentation = "https://www.ISLES2024-CTA.readthedocs.io"

[project.optional-dependencies]
dev = ["pre-commit"]
doc = [
    "sphinx>=6.2.1",
    "sphinx_copybutton",
    "sphinx_rtd_theme>=1.2.2",
    "sphinx-argparse",
    "sphinxcontrib-bibtex",
]

tests = [
    "codecov",
    "coverage",
    "flake8>=3.7",
    "flake8-absolute-import",
    "flake8-black",
    "flake8-docstrings",
    "flake8-isort",
    "flake8-pyproject",
    "flake8-unused-arguments",
    "flake8-use-fstring",
    "pep8-naming",
    "pytest",
    "pytest-cov>=4.0.0",
    "pytest-console-scripts",
    "requests",
]

# Aliases
all = ["ISLES2024_CTA[dev,doc,tests]"]

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"] # No longer needed in sdist


##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ISLES2024_CTA/_version.py"

#
# Developer tool configurations
#

[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | \.testing_data_cache
    | _build
    | build
    | dist
  )/
  | ISLES2024-CTA/_version.py
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 99
exclude = [
    "*build/",
    "ISLES2024_CTA/_version.py",
    "ISLES2024_CTA/tests/*",
]
ignore = ["E203", "E402", "W503", "N802", "N806", "D403"]
per-file-ignores = ["*/__init__.py: F401", "ISLES2024-CTA/tests/*: D"]
docstring-convention = "numpy"

[tool.pydocstringformatter]
write = true
strip-whitespaces = true
max-summary-lines = 1

[tool.coverage.run]
branch = true
omit = [
    "ISLES2024_CTA/tests/*",
    "*/__init__.py",
    "ISLES2024_CTA/_version.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = ['raise NotImplementedError', 'warnings\.warn']

[tool.pytest]
log_cli = true
